Bug 1564083: The profile command line argument should match a profile with the same root directory and use its local directory. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D52736